# push_swap

./:  Readme.md  .gitignore  CMakeLists.txt  Makefile  README.md  checker  push_swap  push_swap.c  push_swap.h
libft/: ft_arg.c  ft_clean.c  ft_functions1.c  ft_functions2.c
src/: ft_check_qualities.c  ft_libft.c
src_checker/: ft_checker.c  ft_checker.h  get_next_line.c  get_next_line.h  get_next_line_utils.c
src_push_swap/: ft_check_qualities.c  ft_commands1.c  ft_commands2.c  ft_commands3.c  ft_commands4.c  ft_libft.c  ft_parser.c  ft_reverse.c  ft_sort1.c  ft_sort2.c  ft_sort3.c  ft_sort4.c  ft_sort_utils1.c  ft_stack.c
